--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,15 +5,28 @@
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="icon" href="favicon.ico">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">-->
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	
 </head>
+
 <body>
+	<div class="edition-mode hidden">
+		<i class="fa-regular fa-pen-to-square"></i> Mode édition
+	</div>
 <header>
-	<h1 class="logo"><a href="./index.html"></a>Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>
-	<!--<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>-->
+	<a href="./index.html">
+		<h1 class="logo">Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>
+	</a>
+	
+	<!--<h1 class="logo"><a href="./index.html"></a>Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>-->
 	<nav>
 		<ul>
 			<li><a href="./index.html"></a>projets</li>
@@ -30,24 +43,41 @@
 			<img src="./assets/images/sophie-bluel.png" alt="">
 		</figure>
 		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+			<h2 class="spitch">Designer d'espace</h2>
+			<p>Je raconte votre histoire, je valorise vos idées. Je vous<br> accompagne de la conception à la livraison finale du<br> chantier.</p>
+			<br>
+			<p>Chaque projet sera étudié en commun, de façon à mettre<br> en valeur les volumes, les matières et les couleurs dans le<br> respect de l’esprit des lieux et le choix adapté des<br> matériaux. Le suivi du chantier sera assuré dans le souci<br> du détail, le respect du planning et du budget.</p>
+			<br>
+			<p>En cas de besoin, une équipe pluridisciplinaire constituée<br> de : architecte DPLG, décorateur(trice).</p>
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
-<!--Rajout des boutons pour filtrer-->
+		<div class="modal1">
+			<h2 class="mes_projets">Mes Projets</h2>
+			<i class="fa-regular fa-pen-to-square" onclick="openModal()"></i>
+			<p class="modifier">modifier</p>
+			<section id="modal-gallery" class="modal">
+				<div class="modal-container">
+					<div class="modal-close">
+						<i class="fa-solid fa-xmark"></i>
+					</div>
+					<p class="modal-title">Galerie Photo</p>
+					<div class="modal-photo">
+						<!-- Contenu de la galerie photo -->
+					</div>
+					<div class="modal-ajout">
+						<input class="btnajout" type="submit" value="Ajouter une Photo">
+					</div>
+				</div>
+			</section>
+			
+		</div>
+	</section>
 		<div id="filter-buttons">
-    		<button class="tous" data-filter="Tous">Tous</button>
-    		<button class="objects" data-filter="1">Objects</button>
-    		<button class="apartements" data-filter="2">Appartements</button>
-    		<button class="hotels-restaurants" data-filter="3">Hôtels & Restaurants</button>
 		</div>
 
 		<div id="gallery" class="gallery">
-
+			
 		</div>
 	</section>
 	<section id="contact">
@@ -74,6 +104,7 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./assets/script.js" defer></script>
+<script src="./assets/js/modal.js" defer></script>
+<script src="./assets/js/script.js" defer></script>
 </body>
 </html>
