--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,7 +13,6 @@
 <body>
     <header>
         <h1 class="logo"><a href="./index.html"></a>Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>
-        <!--<h1><a href="./index.html"></a>Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>-->
         <nav>
             <ul>
                 <li><a href="./index.html" class="nav">projets</a></li>
@@ -34,7 +33,8 @@
                     <label class="password-label" for="password">Mot de passe :</label>
                     <input type="password" id="password" name="password" required>
                     <p id="message-error" class="error-message" role="alert"></p>
-                    <button type="submit" class="button-connect">Se connecter</button>
+                    <button type="submit" class="button-connect animationbtn">Se connecter</button>
+                    <!--<button type="submit" class="button-connect">Se connecter</button>-->
                     
                     <a href="#" class="mdp-forget">Mot de passe oublié ?</a>
                 </form>
@@ -48,7 +48,5 @@
             </ul>
         </nav>
     </footer>
-    
-    <script src="./assets/script.js" defer></script>
 </body>
 </html>
