--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,7 +54,7 @@
 	<section id="portfolio">
 		<div class="modal1">
 			<h2 class="mes_projets">Mes Projets</h2>
-			<i class="fa-regular fa-pen-to-square" onclick="openModal()"></i>
+			<i class="fa-regular fa-pen-to-square" onclick="oModal()"></i>
 			<p class="modifier">modifier</p>
 			<section id="modal-gallery" class="modal">
 				<div class="modal-container">
