--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="icon" href="favicon.ico">
+
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
@@ -54,7 +55,7 @@
 	<section id="portfolio">
 		<div class="modal1">
 			<h2 class="mes_projets">Mes Projets</h2>
-			<i class="fa-regular fa-pen-to-square" onclick="oModal()"></i>
+			<i class="fa-regular fa-pen-to-square" onclick="ouvrirModal()"></i>
 			<p class="modifier">modifier</p>
 			<section id="modal-gallery" class="modal">
 				<div class="modal-container">
