--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,14 +20,12 @@
 
 <body>
 	<div class="edition-mode hidden">
-		<i class="fa-regular fa-pen-to-square"></i> Mode édition
+		<i class="far fa-pen-to-square"></i> Mode édition
 	</div>
 <header>
 	<a href="./index.html">
 		<h1 class="logo">Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>
 	</a>
-	
-	<!--<h1 class="logo"><a href="./index.html"></a>Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>-->
 	<nav>
 		<ul>
 			<li><a href="./index.html"></a>projets</li>
@@ -55,9 +53,9 @@
 	<section id="portfolio">
 		<div class="modal1">
 			<h2 class="mes_projets">Mes Projets</h2>
-			<i class="fa-regular fa-pen-to-square" onclick="ouvrirModal()"></i>
+			<i id="openModalIcon" class="fas fa-pen-square"></i>
 			<p class="modifier">modifier</p>
-			<section id="modal-gallery" class="modal">
+			<section id="modal-gallery" class="modal modal-visible invisible">
 				<div class="modal-container">
 					<div class="modal-close">
 						<i class="fa-solid fa-xmark"></i>
