--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,23 +53,8 @@
 	<section id="portfolio">
 		<div class="modal1">
 			<h2 class="mes_projets">Mes Projets</h2>
-			<i id="openModalIcon" class="fas fa-pen-square"></i>
+			<i id="openModalIcon" class="far fa-pen-to-square"></i>
 			<p class="modifier">modifier</p>
-			<section id="modal-gallery" class="modal modal-visible invisible">
-				<div class="modal-container">
-					<div class="modal-close">
-						<i class="fa-solid fa-xmark"></i>
-					</div>
-					<p class="modal-title">Galerie Photo</p>
-					<div class="modal-photo">
-						<!-- Contenu de la galerie photo -->
-					</div>
-					<div class="modal-ajout">
-						<input class="btnajout" type="submit" value="Ajouter une Photo">
-					</div>
-				</div>
-			</section>
-			
 		</div>
 	</section>
 		<div id="filter-buttons">
