--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="./index.html" class="nav">projets</a></li>
                 <li><a href="#" class="nav">contact</a></li>
-                <li><a href="./login.html" class="nav">login</a></li>
+                <li><a href="./login.html" class="nav" id="login-logout-link">login</a></li>
                 <li><a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
             </ul>
         </nav>
@@ -34,8 +34,6 @@
                     <input type="password" id="password" name="password" required>
                     <p id="message-error" class="error-message" role="alert"></p>
                     <button type="submit" class="button-connect animationbtn">Se connecter</button>
-                    <!--<button type="submit" class="button-connect">Se connecter</button>-->
-                    
                     <a href="#" class="mdp-forget">Mot de passe oublié ?</a>
                 </form>
         </section>
