--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,7 +30,7 @@
 		<ul>
 			<li><a href="./index.html"></a>projets</li>
 			<li><a href="#"></a>contact</li>
-			<li><a href="./login.html" class="login">login</a></li>
+			<li><a href="./login.html" id="loginLink" class="login">Login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
